refactor(config): 重构配置函数求值器实现
- 将REQUIRES_DECRYPT_NAMES从ImmutableSet改为Set.of创建
- 使用AtomicReference替代静态实例变量实现单例模式
- 添加双重检查锁定确保线程安全的单例初始化
- 在日志中记录配置内容以便调试
- 配置求值时使用键名拼接优化命名空间
- 废弃SECRET_KEY常量并引入新的配置密钥名称
- 实现向后兼容的密钥获取逻辑